--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,31 +10,10 @@
         </listener-class>
     </listener>
 
-    <servlet>
-        <servlet-name>RailwayCrossingServlet</servlet-name>
-        <servlet-class>com.railway.app.servlet.GovtRailwayServlet</servlet-class>
-    </servlet>
-
-
-    <servlet>
-        <servlet-name>UserRailwayCrossingServlet</servlet-name>
-        <servlet-class>com.railway.app.servlet.PublicRailwayServlet</servlet-class>
-    </servlet>
-
-
-    <servlet-mapping>
-        <servlet-name>UserRailwayCrossingServlet</servlet-name>
-        <url-pattern>/public</url-pattern>
-    </servlet-mapping>
 
     <servlet>
         <servlet-name>RailwayForm</servlet-name>
         <jsp-file>/govt/railway-from.jsp</jsp-file>
-    </servlet>
-
-    <servlet>
-        <servlet-name>Logout</servlet-name>
-        <jsp-file>/index.jsp</jsp-file>
     </servlet>
 
     <servlet>
@@ -47,6 +26,17 @@
         <jsp-file>/login.jsp</jsp-file>
     </servlet>
 
+
+    <servlet>
+        <servlet-name>SearchForm</servlet-name>
+        <jsp-file>/public/search-from.jsp</jsp-file>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>SearchForm</servlet-name>
+        <url-pattern>/search</url-pattern>
+    </servlet-mapping>
+
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -57,20 +47,12 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>Logout</servlet-name>
-        <url-pattern>/logout</url-pattern>
-    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>RailwayForm</servlet-name>
         <url-pattern>/railway-form</url-pattern>
     </servlet-mapping>
 
-    <servlet-mapping>
-        <servlet-name>RailwayCrossingServlet</servlet-name>
-        <url-pattern>/govt</url-pattern>
-    </servlet-mapping>
     
     <welcome-file-list>
         <welcome-file>/govt</welcome-file>
